<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".result">
        <TextView
            android:id="@+id/tvString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_30dp"
            android:text="@string/String"
            />
        <TextView
            android:id="@+id/tvFloat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Float"
            android:layout_margin="@dimen/margin_30dp"
            />
        <TextView
            android:id="@+id/tvDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Double"
            android:layout_margin="@dimen/margin_30dp"
            />
        <TextView
            android:id="@+id/tvChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_30dp"
            android:text="@string/Char"
             />

    </LinearLayout>
</layout>